deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: permission-lab
  labels:
    component: permission-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      serviceAccountName: krateo-lab-user
      containers:
        - name: api
          image: ghcr.io/krateoplatformops/permission-lab:0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            timeoutSeconds: 5
            periodSeconds: 30
