deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: permission-lab-svc
  labels:
    component: permission-lab
spec:
  selector:
    component: permission-lab
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
